force-app/main/default/objects/Demo__c/fields/Field_Irina__c.field-meta.xml
<CustomField>
    <fullName>Field_Irina__c</fullName>
    <label>Field Irina</label>
    <length>1</length>
    <type>Text</type>
</CustomField>