force-app/main/default/objects/Demo__c/fields/Nikita_field__c.field-meta.xml
<CustomField>
    <fullName>Nikita_field__c</fullName>
    <label>Nikita field</label>
    <length>1</length>
    <type>Text</type>
</CustomField>