force-app/main/default/objects/Demo__c/fields/Una_Test_Demo_field__c.field-meta.xml
<CustomField>
    <fullName>Una_Test_Demo_field__c</fullName>
    <label>Una Test Demo field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>